[tool.poetry]
name = "badb"
version = "0.1.0"
description = ""
authors = ["The Policy Lab"]

[tool.poetry.dependencies]
python = "^3.6.3"
tqdm = "^4.46.1"
pandas = "^1.0.4"
smartystreets_python_sdk = "^4.5.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.3"
pylint = "^2.5.3"
mypy = "^0.780"
ipdb = "^0.13.2"

[tool.poetry.scripts]
badb = "badb.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
